Nutch Change Log

Release 2.2 - Current Development

* NUTCH-1491 Strip UTF-8 non-character codepoints in title (Nathan Gass via markus)

* NUTCH-1421 RegexURLNormalizer to only skip rules with invalid patterns (snagel)

* NUTCH-1433 Upgrade to Tika 1.2 (jnioche)

* NUTCH-1087 Deprecate crawl command and replace with example script (jnioche)

* NUTCH-874 Make sure all plugins in src/plugin are compatible with Nutch 2.0 and Gora (part 1) (Kiran Chitturi via lewismc)

* NUTCH-1344 BasicURLNormalizer to normalize https same as http (snagel)

* NUTCH-706 Url regex normalizer: pattern for session id removal not to match "newsId" (Meghna Kukreja via snagel)

Release 2.1 (19/09/2012) ddmmyyyy
Full Jira Report - https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=10680&version=12321040

* NUTCH-1415 release packages to contain top level folder apache-nutch-x.x (snagel)

* NUTCH-1432 property storage.schema does not work anymore, should be storage.schema.webpage and storage.schema.host (lewismc)

* NUTCH-1468 Redirects that are external links not adhering to db.ignore.external.links (Matt MacDonald via ferdy)

* NUTCH-1470 Ensure test files are included for runtime testing (lewismc)

* NUTCH-1162 Write JUnit tests for parse-js (lewismc)

* NUTCH-1161 Write JUnit tests for microformats-reltag plugin (lewismc)

* NUTCH-1160 Write JUnit tests for index-basic (lewismc)

* NUTCH-1456 Updater not setting batchId in markers correctly. (Alexander Kingson via ferdy)

* NUTCH-1459 Remove dead code (phase2) from InjectorJob (ferdy)

* NUTCH-1431 Introduce link 'distance' and add configurable max distance in the generator (ferdy)

* NUTCH-1448 Redirected urls should be handled more cleanly (more like an outlink url) (ferdy)

* NUTCH-1463 Elasticsearch indexer should wait and check response for last flush (ferdy)

* NUTCH-1462 Elasticsearch not indexing when type==null in NutchDocument metadata (ferdy)

* NUTCH-1395 Show batchId when skipping within ParserJob (lewismc)
